Fix AE ACL project input name
